# cc_toolchains_kylin

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: workflow.yml
examples/: .bazelrc  MODULE.bazel
toolchain/kylin/: BUILD.bazel  kylin_cc_config.bzl
toolchain/kylin/wrapper/: gcc.sh
